--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
   <script src="main.js" defer></script>
 </head>
 <body>
-  
+  <!-- <header></header> -->
+  <!-- Navbar -->
+  <nav id="navbar">
+    <div class="navbar__logo">
+      <a href="#"><i class="fas fa-certificate"></i> JeongAh</a>
+    </div>
+    <ul class="navbar__menu">
+      <li class="navbar__menu__item">Home</li>
+      <li class="navbar__menu__item">About</li>
+      <li class="navbar__menu__item">Skills</li>
+      <li class="navbar__menu__item">Works</li>
+      <li class="navbar__menu__item">Testimonial</li>
+      <li class="navbar__menu__item">Contact</li>
+    </ul>
+  </nav>
+  <!-- About -->
+  <section id="about"></section>
+  <!-- Skills -->
+  <section id="skills"></section>
+  <!-- Works -->
+  <section id="works"></section>
+  <!-- Testimonials -->
+  <section id="testimonials"></section>
+  <!-- Contact -->
+  <section id="contact"></section>
 </body>
 </html>
