--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       <li class="navbar__menu__item">Contact</li>
     </ul>
   </nav>
+  <!-- Home -->
+  <section id="home">
+    <img src="imgs/photo.jpg" alt="프로필 사진" class="img__avatar">
+    <h1 class="home__title">Hello,<br>I'm Kim JeongAh</h1>
+    <h2 class="home__description">웹퍼블리셔 김정아입니다.</h2>
+    <button class="home__contact">Contact Me</button>
+  </section>
   <!-- About -->
   <section id="about"></section>
   <!-- Skills -->
