--- a/index.html
+++ b/index.html
@@ -33,17 +33,74 @@
   <section id="home">
     <img src="imgs/photo.jpg" alt="프로필 사진" class="img__avatar">
     <h1 class="home__title">Hello,<br>I'm Kim JeongAh</h1>
-    <h2 class="home__description">웹퍼블리셔 김정아입니다.</h2>
+    <h2 class="home__description">성장형 웹퍼블리셔 김정아입니다.</h2>
     <button class="home__contact">Contact Me</button>
   </section>
+
   <!-- About -->
-  <section id="about"></section>
+  <section id="about">
+    <h1>About me</h1>
+    <p>
+      항상 성장을 위해 고민하는 웹퍼블리셔 김정아입니다.<br>
+      저는 대학교에서 애니메이션 전공 했으며, 인터렉티브 웹에 관심이 있습니다. 더욱 다양한 디자인을 구현할 수 있도록 열심히 공부하고 있습니다.<br>
+      저는 공공기관 등 여러 기업들의 SI 프로젝트를 수행했습니다. 다양한 프로젝트를 경험하며 기획자, 디자이너, 개발자 소통하고 협업하는 방법을 배웠습니다.<br>
+      끊임없는 배움의 자세로, 내일 더 성장해 있을 자신의 모습을 그리며 나아가고 있습니다.
+    </p>
+    <div class="about__majors">
+      <div class="major">
+        <div class="major__icon">
+          <i class="fab fa-html5"></i>
+        </div>
+        <div class="major__title">Html</div>
+        <div class="major__description">
+          콘텐츠에 알맞고, 불필요한 태그 없이 간결한 마크업<br>
+          웹표준과 웹접근성을 준수한 마크업
+        </div>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fab fa-css3-alt"></i>
+        </div>
+        <div class="major__title">CSS</div>
+        <div class="major__description">
+          크로스 브라우징<br>
+          반응형 레이아웃<br>
+          편한 유지보수를 위해, 유연한 css 작성
+        </div>
+      </div>
+      <div class="major">
+        <div class="major__icon">
+          <i class="fab fa-js-square"></i>
+        </div>
+        <div class="major__title">Javascript</div>
+        <div class="major__description">
+          Javascript<br>
+          jQuery<br>
+          다양한 플러그인 활용
+        </div>
+      </div>
+    </div>
+    <ul class="about__jobs">
+      <li class="job">
+        <p class="job__name">시아나</p>
+        <p class="job__period">2020.12 ~ 2021.07</p>
+      </li>
+      <li class="job">
+        <p class="job__name">시야인사이트</p>
+        <p class="job__period">2017.12 ~ 2019.12</p>
+      </li>
+    </ul>
+  </section>
+
   <!-- Skills -->
   <section id="skills"></section>
+
   <!-- Works -->
   <section id="works"></section>
+
   <!-- Testimonials -->
   <section id="testimonials"></section>
+
   <!-- Contact -->
   <section id="contact"></section>
 </body>
