--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <div class="major__icon">
           <i class="fab fa-js-square"></i>
         </div>
-        <div class="major__title">Javascript</div>
+        <div class="major__title">JavaScript</div>
         <div class="major__description">
-          Javascript<br>
+          JavaScript<br>
           jQuery<br>
           다양한 플러그인 활용
         </div>
@@ -93,7 +93,61 @@
   </section>
 
   <!-- Skills -->
-  <section id="skills"></section>
+  <section id="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attributes</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi architecto rem, porro perferendis aliquam, quibusdam, laborum cum sit cupiditate sequi accusantium aperiam. Nisi architecto optio, molestiae nemo itaque minus suscipit?
+    </p>
+    <div class="skillset">
+      <div class="skillset__left">
+        <h3 class="skillset__title">Skills</h3>
+        <div class="skill">
+          <div class="skill__description">
+            <span>HTML</span>
+            <span>80%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>CSS</span>
+            <span>70%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+        <div class="skill">
+          <div class="skill__description">
+            <span>JavaScript</span>
+            <span>20%</span>
+          </div>
+          <div class="skill__bar">
+            <div class="skill__value"></div>
+          </div>
+        </div>
+      </div>
+      <div class="skillset__right">
+        <div class="tools">
+          <h3 class="skillset__title">Tools</h3>
+          <ul class="tools__list">
+            <li><span>Visual Studio Code</span></li>
+            <li><span>Zeplin</span></li>
+            <li><span>Adobe 프로그램</span></li>
+          </ul>
+        </div>
+        <div class="etc">
+          <h3 class="skillset__title">Etc</h3>
+          <ul class="etc__list">
+            <li><span>Git</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Works -->
   <section id="works"></section>
