--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@
         <div class="tools">
           <h3 class="skillset__title">Tools</h3>
           <ul class="tools__list">
-            <li><span>Visual Studio Code</span></li>
-            <li><span>Zeplin</span></li>
-            <li><span>Adobe 프로그램</span></li>
+            <li>Visual Studio Code</li>
+            <li>Zeplin</li>
+            <li>Adobe 프로그램</li>
           </ul>
         </div>
         <div class="etc">
           <h3 class="skillset__title">Etc</h3>
           <ul class="etc__list">
-            <li><span>Git</span></li>
+            <li>Git</li>
           </ul>
         </div>
       </div>
@@ -150,7 +150,33 @@
   </section>
 
   <!-- Works -->
-  <section id="works"></section>
+  <section id="works">
+    <h1>Works</h1>
+    <h2>Projects</h2>
+    <div class="work__categories">
+      <button class="category__btn">All<span class="category__count">1</span></button>
+      <button class="category__btn">PC<span class="category__count">1</span></button>
+      <button class="category__btn">Mobile<span class="category__count">1</span></button>
+      <button class="category__btn">반응형<span class="category__count">1</span></button>
+    </div>
+
+    <div class="work__projects">
+      <a href="#" class="project" target="_blank">
+        <img src="imgs/favicon.png" alt="" class="project__img">
+        <div class="project__description">
+          <h3>title</h3>
+          <span>설명</span>
+        </div>
+      </a>
+      <a href="#" class="project" target="_blank">
+        <img src="imgs/favicon.png" alt="" class="project__img">
+        <div class="project__description">
+          <h3>title</h3>
+          <span>설명</span>
+        </div>
+      </a>
+    </div>
+  </section>
 
   <!-- Testimonials -->
   <section id="testimonials"></section>
