--- a/index.html
+++ b/index.html
@@ -165,23 +165,50 @@
         <img src="imgs/favicon.png" alt="" class="project__img">
         <div class="project__description">
           <h3>title</h3>
-          <span>설명</span>
+          <p>설명</p>
         </div>
       </a>
       <a href="#" class="project" target="_blank">
         <img src="imgs/favicon.png" alt="" class="project__img">
         <div class="project__description">
           <h3>title</h3>
-          <span>설명</span>
+          <p>설명</p>
         </div>
       </a>
     </div>
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials"></section>
+  <section id="testimonials">
+    <h1>Testimonials</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="imgs/people1.jpg" alt="" class="testimonials__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti unde, numquam saepe consequuntur voluptates illum debitis sint sapiente commodi atque accusantium quod ipsum voluptatem provident odio beatae animi, deleniti quasi id. Delectus, temporibus et. Repellat voluptate necessitatibus numquam quod vel!</p>
+          <p class="name"><a href="#">Ellie / Ellie</a></p>
+        </div>
+      </div>
+      <div class="testimonial">
+        <img src="imgs/people1.jpg" alt="" class="testimonials__avatar">
+        <div class="testimonial__speech-bubble">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti unde, numquam saepe consequuntur voluptates illum debitis sint sapiente commodi atque accusantium quod ipsum voluptatem provident odio beatae animi, deleniti quasi id. Delectus, temporibus et. Repellat voluptate necessitatibus numquam quod vel!</p>
+          <p class="name"><a href="#">Ellie / Ellie</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Contact -->
-  <section id="contact"></section>
+  <section id="contact">
+    <h1 class="contact__title">Contact</h1>
+    <h2 class="contact__email">junga8888@naver.com</h2>
+    <div class="contact__links">
+      <a href="#" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+  </section>
 </body>
 </html>
