--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
     </div>
 
     <div class="work__projects">
-      <a href="#" class="project" target="_blank">
-        <img src="imgs/favicon.png" alt="" class="project__img">
+      <a href="#" class="project" target="blank">
+        <img src="imgs/favicon.png" alt="" class="project__img" data-type="PC">
         <div class="project__description">
           <h3>title</h3>
           <p>설명</p>
         </div>
       </a>
-      <a href="#" class="project" target="_blank">
-        <img src="imgs/favicon.png" alt="" class="project__img">
+      <a href="#" class="project" target="blank">
+        <img src="imgs/favicon.png" alt="" class="project__img" data-type="Mobile">
         <div class="project__description">
           <h3>title</h3>
           <p>설명</p>
@@ -209,6 +209,7 @@
         <i class="fab fa-github"></i>
       </a>
     </div>
+    <p class="contact__rights">2021 Kim JeongAh - All rights reserved </p>
   </section>
 </body>
 </html>
