HTML: font 링크 수정CSS: 공통 style 작성
HTML: font 링크 수정
CSS: 공통 style 작성

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="JeongAh">
   <link rel="icon" type="image/png" href="imgs/favicon.png">
   <script src="https://kit.fontawesome.com/caf81dcbc8.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
 </head>
@@ -29,6 +29,7 @@
       <li class="navbar__menu__item">Contact</li>
     </ul>
   </nav>
+  
   <!-- Home -->
   <section id="home">
     <img src="imgs/photo.jpg" alt="프로필 사진" class="img__avatar">
