--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#"><i class="fas fa-certificate"></i> JeongAh</a>
     </div>
     <ul class="navbar__menu">
-      <li class="navbar__menu__item">Home</li>
+      <li class="navbar__menu__item active">Home</li>
       <li class="navbar__menu__item">About</li>
       <li class="navbar__menu__item">Skills</li>
       <li class="navbar__menu__item">Works</li>
@@ -29,7 +29,7 @@
       <li class="navbar__menu__item">Contact</li>
     </ul>
   </nav>
-  
+
   <!-- Home -->
   <section id="home">
     <img src="imgs/photo.jpg" alt="프로필 사진" class="img__avatar">
