--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <!-- Home -->
   <section id="home">
-    <img src="imgs/photo.jpg" alt="프로필 사진" class="img__avatar">
+    <img src="imgs/photo.jpg" alt="프로필 사진" class="home__avatar">
     <h1 class="home__title">Hello,<br>I'm Kim JeongAh</h1>
     <h2 class="home__description">성장형 웹퍼블리셔 김정아입니다.</h2>
     <button class="home__contact">Contact Me</button>
