--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </section>
 
   <!-- About -->
-  <section id="about">
+  <section id="about" class="section">
     <h1>About me</h1>
     <p>
       항상 성장을 위해 고민하는 웹퍼블리셔 김정아입니다.<br>
@@ -52,9 +52,10 @@
         <div class="major__icon">
           <i class="fab fa-html5"></i>
         </div>
-        <div class="major__title">Html</div>
+        <h2 class="major__title">Html</h2>
         <div class="major__description">
-          콘텐츠에 알맞고, 불필요한 태그 없이 간결한 마크업<br>
+          콘텐츠에 알맞고,<br>
+          불필요한 태그 없이 간결한 마크업<br>
           웹표준과 웹접근성을 준수한 마크업
         </div>
       </div>
@@ -62,7 +63,7 @@
         <div class="major__icon">
           <i class="fab fa-css3-alt"></i>
         </div>
-        <div class="major__title">CSS</div>
+        <h2 class="major__title">CSS</h2>
         <div class="major__description">
           크로스 브라우징<br>
           반응형 레이아웃<br>
@@ -73,7 +74,7 @@
         <div class="major__icon">
           <i class="fab fa-js-square"></i>
         </div>
-        <div class="major__title">JavaScript</div>
+        <h2 class="major__title">JavaScript</h2>
         <div class="major__description">
           JavaScript<br>
           jQuery<br>
@@ -81,7 +82,7 @@
         </div>
       </div>
     </div>
-    <ul class="about__jobs">
+    <!-- <ul class="about__jobs">
       <li class="job">
         <p class="job__name">시아나</p>
         <p class="job__period">2020.12 ~ 2021.07</p>
@@ -90,11 +91,11 @@
         <p class="job__name">시야인사이트</p>
         <p class="job__period">2017.12 ~ 2019.12</p>
       </li>
-    </ul>
+    </ul> -->
   </section>
 
   <!-- Skills -->
-  <section id="skills">
+  <section id="skills" class="section">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>
@@ -151,7 +152,7 @@
   </section>
 
   <!-- Works -->
-  <section id="works">
+  <section id="works" class="section">
     <h1>Works</h1>
     <h2>Projects</h2>
     <div class="work__categories">
@@ -180,7 +181,7 @@
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section id="testimonials" class="section">
     <h1>Testimonials</h1>
     <h3>See what they say about me</h3>
     <div class="testimonials">
@@ -202,7 +203,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact">
+  <section id="contact" class="section">
     <h1 class="contact__title">Contact</h1>
     <h2 class="contact__email">junga8888@naver.com</h2>
     <div class="contact__links">
