--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   <section id="home">
     <img src="imgs/photo.jpg" alt="프로필 사진" class="home__avatar">
     <h1 class="home__title">Hello,<br>I'm Kim JeongAh</h1>
-    <h2 class="home__description">성장형 웹퍼블리셔 김정아입니다.</h2>
+    <h2 class="home__description">웹퍼블리셔 김정아입니다.</h2>
     <button class="home__contact">Contact Me</button>
   </section>
 
   <!-- About -->
-  <section id="about" class="section">
+  <section id="about" class="section section__container">
     <h1>About me</h1>
     <p>
       항상 성장을 위해 고민하는 웹퍼블리셔 김정아입니다.<br>
@@ -96,56 +96,55 @@
 
   <!-- Skills -->
   <section id="skills" class="section">
-    <h1>Skills</h1>
-    <h2>Skills & Attributes</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi architecto rem, porro perferendis aliquam, quibusdam, laborum cum sit cupiditate sequi accusantium aperiam. Nisi architecto optio, molestiae nemo itaque minus suscipit?
-    </p>
-    <div class="skillset">
-      <div class="skillset__left">
-        <h3 class="skillset__title">Skills</h3>
-        <div class="skill">
-          <div class="skill__description">
-            <span>HTML</span>
-            <span>80%</span>
+    <div class="section__container">
+      <h1>Skills</h1>
+      <h2>Skills & Attributes</h2>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">Skills</h3>
+          <div class="skill">
+            <div class="skill__description">
+              <span>HTML</span>
+              <span>80%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 80%;"></div>
+            </div>
           </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>CSS</span>
+              <span>70%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 70%;"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>JavaScript</span>
+              <span>20%</span>
+            </div>
+            <div class="skill__bar">
+              <div class="skill__value" style="width: 20%;"></div>
+            </div>
           </div>
         </div>
-        <div class="skill">
-          <div class="skill__description">
-            <span>CSS</span>
-            <span>70%</span>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li>Visual Studio Code</li>
+              <li>Zeplin</li>
+              <li>Adobe 프로그램</li>
+            </ul>
           </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <li>Git</li>
+            </ul>
           </div>
-        </div>
-        <div class="skill">
-          <div class="skill__description">
-            <span>JavaScript</span>
-            <span>20%</span>
-          </div>
-          <div class="skill__bar">
-            <div class="skill__value"></div>
-          </div>
-        </div>
-      </div>
-      <div class="skillset__right">
-        <div class="tools">
-          <h3 class="skillset__title">Tools</h3>
-          <ul class="tools__list">
-            <li>Visual Studio Code</li>
-            <li>Zeplin</li>
-            <li>Adobe 프로그램</li>
-          </ul>
-        </div>
-        <div class="etc">
-          <h3 class="skillset__title">Etc</h3>
-          <ul class="etc__list">
-            <li>Git</li>
-          </ul>
         </div>
       </div>
     </div>
