--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
     <h1>Works</h1>
     <h2>Projects</h2>
     <div class="work__categories">
-      <button class="category__btn">All<span class="category__count">1</span></button>
-      <button class="category__btn">PC<span class="category__count">1</span></button>
-      <button class="category__btn">Mobile<span class="category__count">1</span></button>
-      <button class="category__btn">반응형<span class="category__count">1</span></button>
+      <button class="category__btn active">All <span class="category__count">1</span></button>
+      <button class="category__btn">PC <span class="category__count">1</span></button>
+      <button class="category__btn">Mobile <span class="category__count">1</span></button>
+      <button class="category__btn">반응형 <span class="category__count">1</span></button>
     </div>
 
     <div class="work__projects">
