--- a/index.html
+++ b/index.html
@@ -188,14 +188,14 @@
         <img src="imgs/people1.jpg" alt="" class="testimonials__avatar">
         <div class="testimonial__speech-bubble">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti unde, numquam saepe consequuntur voluptates illum debitis sint sapiente commodi atque accusantium quod ipsum voluptatem provident odio beatae animi, deleniti quasi id. Delectus, temporibus et. Repellat voluptate necessitatibus numquam quod vel!</p>
-          <p class="name"><a href="#">Ellie / Ellie</a></p>
+          <p class="name"><a href="#">Ellie</a> / Ellie</p>
         </div>
       </div>
       <div class="testimonial">
         <img src="imgs/people1.jpg" alt="" class="testimonials__avatar">
         <div class="testimonial__speech-bubble">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti unde, numquam saepe consequuntur voluptates illum debitis sint sapiente commodi atque accusantium quod ipsum voluptatem provident odio beatae animi, deleniti quasi id. Delectus, temporibus et. Repellat voluptate necessitatibus numquam quod vel!</p>
-          <p class="name"><a href="#">Ellie / Ellie</a></p>
+          <p class="name"><a href="#">Ellie</a> / Ellie</p>
         </div>
       </div>
     </div>
