--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   </section>
 
   <!-- Works -->
-  <section id="works" class="section">
+  <section id="works" class="section section__container">
     <h1>Works</h1>
     <h2>Projects</h2>
     <div class="work__categories">
@@ -181,21 +181,23 @@
 
   <!-- Testimonials -->
   <section id="testimonials" class="section">
-    <h1>Testimonials</h1>
-    <h3>See what they say about me</h3>
-    <div class="testimonials">
-      <div class="testimonial">
-        <img src="imgs/people1.jpg" alt="" class="testimonials__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti unde, numquam saepe consequuntur voluptates illum debitis sint sapiente commodi atque accusantium quod ipsum voluptatem provident odio beatae animi, deleniti quasi id. Delectus, temporibus et. Repellat voluptate necessitatibus numquam quod vel!</p>
-          <p class="name"><a href="#">Ellie</a> / Ellie</p>
+    <div class="section__container">
+      <h1>Testimonials</h1>
+      <h3>See what they say about me</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img src="imgs/people1.jpg" alt="" class="testimonials__avatar">
+          <div class="testimonial__speech-bubble">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti unde, numquam saepe consequuntur voluptates illum debitis sint sapiente commodi atque accusantium quod ipsum voluptatem provident odio beatae animi, deleniti quasi id. Delectus, temporibus et. Repellat voluptate necessitatibus numquam quod vel!</p>
+            <p class="name"><a href="#">Ellie</a> / Ellie</p>
+          </div>
         </div>
-      </div>
-      <div class="testimonial">
-        <img src="imgs/people1.jpg" alt="" class="testimonials__avatar">
-        <div class="testimonial__speech-bubble">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti unde, numquam saepe consequuntur voluptates illum debitis sint sapiente commodi atque accusantium quod ipsum voluptatem provident odio beatae animi, deleniti quasi id. Delectus, temporibus et. Repellat voluptate necessitatibus numquam quod vel!</p>
-          <p class="name"><a href="#">Ellie</a> / Ellie</p>
+        <div class="testimonial">
+          <img src="imgs/people1.jpg" alt="" class="testimonials__avatar">
+          <div class="testimonial__speech-bubble">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti unde, numquam saepe consequuntur voluptates illum debitis sint sapiente commodi atque accusantium quod ipsum voluptatem provident odio beatae animi, deleniti quasi id. Delectus, temporibus et. Repellat voluptate necessitatibus numquam quod vel!</p>
+            <p class="name"><a href="#">Ellie</a> / Ellie</p>
+          </div>
         </div>
       </div>
     </div>
