--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
       <a href="#"><i class="fas fa-certificate"></i> JeongAh</a>
     </div>
     <ul class="navbar__menu">
-      <li class="navbar__menu__item active">Home</li>
-      <li class="navbar__menu__item">About</li>
-      <li class="navbar__menu__item">Skills</li>
-      <li class="navbar__menu__item">Works</li>
-      <li class="navbar__menu__item">Testimonial</li>
-      <li class="navbar__menu__item">Contact</li>
+      <li class="navbar__menu__item active" data-link="home">Home</li>
+      <li class="navbar__menu__item" data-link="about">About</li>
+      <li class="navbar__menu__item" data-link="skills">Skills</li>
+      <li class="navbar__menu__item" data-link="work">Works</li>
+      <li class="navbar__menu__item" data-link="testimonials">Testimonial</li>
+      <li class="navbar__menu__item" data-link="contact">Contact</li>
     </ul>
+
+    <!-- Toggle button -->
+    <button class="navbar__toggle-btn">
+      <i class="fas fa-bars"></i>
+    </button>
   </nav>
 
   <!-- Home -->
