--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <a href="#"><i class="fas fa-certificate"></i> JeongAh</a>
     </div>
     <ul class="navbar__menu">
-      <li class="navbar__menu__item active" data-link="home">Home</li>
-      <li class="navbar__menu__item" data-link="about">About</li>
-      <li class="navbar__menu__item" data-link="skills">Skills</li>
-      <li class="navbar__menu__item" data-link="work">Works</li>
-      <li class="navbar__menu__item" data-link="testimonials">Testimonial</li>
-      <li class="navbar__menu__item" data-link="contact">Contact</li>
+      <li class="navbar__menu__item active" data-link="#home">Home</li>
+      <li class="navbar__menu__item" data-link="#about">About</li>
+      <li class="navbar__menu__item" data-link="#skills">Skills</li>
+      <li class="navbar__menu__item" data-link="#works">Works</li>
+      <li class="navbar__menu__item" data-link="#testimonials">Testimonial</li>
+      <li class="navbar__menu__item" data-link="#contact">Contact</li>
     </ul>
 
     <!-- Toggle button -->
@@ -40,7 +40,7 @@
     <img src="imgs/photo.jpg" alt="프로필 사진" class="home__avatar">
     <h1 class="home__title">Hello,<br>I'm Kim JeongAh</h1>
     <h2 class="home__description">웹퍼블리셔 김정아입니다.</h2>
-    <button class="home__contact">Contact Me</button>
+    <button class="home__contact" data-link="#contact">Contact Me</button>
   </section>
 
   <!-- About -->
