JS: Home contact button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <img src="imgs/photo.jpg" alt="프로필 사진" class="home__avatar">
     <h1 class="home__title">Hello,<br>I'm Kim JeongAh</h1>
     <h2 class="home__description">웹퍼블리셔 김정아입니다.</h2>
-    <button class="home__contact" data-link="#contact">Contact Me</button>
+    <button class="home__contact">Contact Me</button>
   </section>
 
   <!-- About -->
