--- a/index.html
+++ b/index.html
@@ -221,5 +221,8 @@
     </div>
     <p class="contact__rights">2021 Kim JeongAh - All rights reserved </p>
   </section>
+
+  <!-- Arrow up -->
+  <button class="arrow-up"><i class="fas fa-chevron-up"></i></button>
 </body>
 </html>
