--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h1>About me</h1>
     <p>
       항상 성장을 위해 고민하는 웹퍼블리셔 김정아입니다. 
-      저는 대학교에서 애니메이션 전공 했으며, 인터렉티브 웹에 관심이 있습니다. 더욱 다양한 디자인을 구현할 수 있도록 열심히 공부하고 있습니다. 
+      저는 대학교에서 애니메이션 전공 했으며, 인터렉티브 웹에 관심이 있습니다. 더욱 다양한 디자인을 구현할 수 있도록 열심히 공부하고 있습니다.<br>
       저는 공공기관 등 여러 기업들의 SI 프로젝트를 수행했습니다. 다양한 프로젝트를 경험하며 기획자, 디자이너, 개발자 소통하고 협업하는 방법을 배웠습니다. 
       끊임없는 배움의 자세로, 내일 더 성장해 있을 자신의 모습을 그리며 나아가고 있습니다.
     </p>
