--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li class="navbar__menu__item" data-link="#about">About</li>
       <li class="navbar__menu__item" data-link="#skills">Skills</li>
       <li class="navbar__menu__item" data-link="#works">Works</li>
-      <li class="navbar__menu__item" data-link="#testimonials">Testimonial</li>
+      <!-- <li class="navbar__menu__item" data-link="#testimonials">Testimonial</li> -->
       <li class="navbar__menu__item" data-link="#contact">Contact</li>
     </ul>
 
@@ -194,7 +194,7 @@
   </section>
 
   <!-- Testimonials -->
-  <section id="testimonials" class="section">
+  <!-- <section id="testimonials" class="section">
     <div class="section__container">
       <h1>Testimonials</h1>
       <h3>See what they say about me</h3>
@@ -215,7 +215,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact -->
   <section id="contact" class="section">
